# GinRummy

./: .gitignore  .gitmodules  CMakeLists.txt  Card.cpp  Card.h  GinRummy.cpp  GinRummy.h  README.md  main.cpp  screen_mockup_end_hand.txt  screen_mockup_play.txt
lib/: CMakeLists.txt  Card.cpp  Card.h
lib/tests/: CMakeLists.txt
src/: CMakeLists.txt  Card.cpp  Card.h  GinRummy.cpp  GinRummy.h  GinRummyConsole.cpp  GinRummyConsole.h  GinRummyRestServer.cpp  GinRummyRestServer.h  main.cpp
src/tests/: CMakeLists.txt  CardTest.cpp  GinRummyTest.cpp
tests/: CMakeLists.txt  GinRummyTest.cpp
